<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DoctorDetails">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_img_doctor_details"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_doctor_details"
                android:layout_width="100dp"
                android:scaleType="centerCrop"
                android:layout_height="150dp"
                app:srcCompat="@drawable/ic_launcher_foreground" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/name_doctor_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            app:layout_constraintTop_toTopOf="@id/card_img_doctor_details"
            app:layout_constraintStart_toEndOf="@id/card_img_doctor_details"
            android:textSize="30sp"
            android:textStyle="bold"
            android:maxEms="7"
            android:layout_marginStart="15dp"
            android:maxLines="2"
            android:layout_marginTop="15dp" />

        <TextView
            android:id="@+id/specialisation_doctor_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/app_name"
            android:maxLines="2"
            android:layout_marginTop="10dp"
            android:maxEms="10"
            app:layout_constraintTop_toBottomOf="@id/name_doctor_details"
            app:layout_constraintStart_toStartOf="@id/name_doctor_details"/>

        <TextView
            android:id="@+id/address_head_doctor_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/address"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/card_img_doctor_details"
            app:layout_constraintStart_toStartOf="@id/card_img_doctor_details" />

        <TextView
            android:id="@+id/address_doctor_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/app_name"
            android:maxLines="5"
            android:layout_marginEnd="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/address_head_doctor_details"
            app:layout_constraintStart_toStartOf="@id/address_head_doctor_details" />

        <TextView
            android:id="@+id/about_head_doctor_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/about"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/address_doctor_details"
            app:layout_constraintStart_toStartOf="@id/card_img_doctor_details" />

        <TextView
            android:id="@+id/about_doctor_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="15sp"
            android:maxLines="10"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/about_head_doctor_details"
            app:layout_constraintStart_toStartOf="@id/about_head_doctor_details" />


        <TextView
            android:id="@+id/timing_head_doctor_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/timingandfees"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/about_doctor_details"
            app:layout_constraintStart_toStartOf="@id/about_head_doctor_details" />

        <TextView
            android:id="@+id/timing_doctor_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/app_name"
            android:maxLines="3"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="15sp"
            app:layout_constraintTop_toBottomOf="@id/timing_head_doctor_details"
            app:layout_constraintStart_toStartOf="@id/timing_head_doctor_details" />

        <TextView
            android:id="@+id/fees_doctor_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/app_name"
            android:maxLines="1"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/timing_doctor_details"
            app:layout_constraintStart_toStartOf="@id/timing_head_doctor_details" />

        <TextView
            android:id="@+id/awards_head_doctor_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/awards"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/fees_doctor_details"
            app:layout_constraintStart_toStartOf="@id/about_head_doctor_details" />

        <TextView
            android:id="@+id/awards_doctor_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/app_name"
            android:maxLines="3"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/awards_head_doctor_details"
            app:layout_constraintStart_toStartOf="@id/awards_head_doctor_details" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>